--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{A23C9898-3F15-7173-75EB-EE14334A7A3B}</ProjectGuid>
+    <ProjectGuid>{167A4C55-279D-04B8-F9AD-9C18619C707A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -46,11 +46,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Base\DynamicObjectsGeneratorBase.cs" />
      <Compile Include="Assets\Scripts\Base\GameFieldBase.cs" />
      <Compile Include="Assets\Scripts\Base\StaticObjectsGeneratorBase.cs" />
+     <Compile Include="Assets\Scripts\Common\DynamicObjectsGenerator.cs" />
      <Compile Include="Assets\Scripts\Common\GameField.cs" />
      <Compile Include="Assets\Scripts\Common\ObjectCreator.cs" />
      <Compile Include="Assets\Scripts\Common\StaticObjectsGenerator.cs" />
+     <Compile Include="Assets\Scripts\PlayerController.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
