Fixed GameField, add base ObjectController
Replaced GetPlayer, GetEnemies, GetEnemy to GeneratePlayer,
GenerateEnemies, GenerateEnemy. Add new base class ObjectController.
Replaced IsPossible to CanGo, inverted the logic this method.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\Base\DynamicObjectsGeneratorBase.cs" />
      <Compile Include="Assets\Scripts\Base\GameFieldBase.cs" />
+     <Compile Include="Assets\Scripts\Base\ObjectController.cs" />
      <Compile Include="Assets\Scripts\Base\StaticObjectsGeneratorBase.cs" />
      <Compile Include="Assets\Scripts\Common\DynamicObjectsGenerator.cs" />
      <Compile Include="Assets\Scripts\Common\Extensions.cs" />
