--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
      <Compile Include="Assets\Scripts\Base\GameFieldBase.cs" />
      <Compile Include="Assets\Scripts\Base\StaticObjectsGeneratorBase.cs" />
      <Compile Include="Assets\Scripts\BombController.cs" />
+     <Compile Include="Assets\Scripts\BrickWallController.cs" />
      <Compile Include="Assets\Scripts\Common\AStar\AStarSearch.cs" />
      <Compile Include="Assets\Scripts\Common\AStar\PathPoint.cs" />
      <Compile Include="Assets\Scripts\Common\DynamicObjectsGenerator.cs" />
@@ -74,6 +75,7 @@
      <Compile Include="Assets\Scripts\Common\StaticObjectsGenerator.cs" />
      <Compile Include="Assets\Scripts\EnemyController.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
+     <Compile Include="Assets\Scripts\Powerup.cs" />
      <Compile Include="Assets\Scripts\SmartEnemyController.cs" />
      <None Include="Assets\Standard Assets\Effects\GlassRefraction\Shaders\GlassStainedBumpDistort.shader" />
      <None Include="Assets\Standard Assets\Effects\ToonShading\Shaders\ToonBasic.shader" />
